--- a/overrides/aliases.cfg
+++ b/overrides/aliases.cfg
@@ -141,7 +141,7 @@ alias vo_niceshot        "voicemenu 2 6"
 alias vo_goodjob         "voicemenu 2 7"
 
 
-// --------------------- TF2 sfx are containted tf/tf2_sound_misc_dir.vpk
+// --------------------- TF2 sfx are contained tf/tf2_sound_misc_dir.vpk
 // |   Sound Effects   | Reference the containing folder of a wav file to play it. Timepath makes plentiful use of aliases to exclusively assign sounds to functions like airblast and grenade roller timer https://github.com/TimePath/tf2-config/blob/master/cfg/timepath/roles/demoman.cfg
 // ---------------------
 alias slotswitched "sndplaydelay 0 common/wpn_moveselect.wav"
@@ -150,7 +150,7 @@ alias slotswitched "sndplaydelay 0 common/wpn_moveselect.wav"
 // ------------------------------------------ https://github.com/TimePath/tf2-config/blob/master/cfg/timepath/aliases_crosshairs.cfg
 // |   Crosshair and Damage Number Colors   |
 // ------------------------------------------
-alias red					"cl_crosshair_red 255; cl_crosshair_green 0;   cl_crosshair_blue 0"
+alias red           "cl_crosshair_red 255; cl_crosshair_green 0;   cl_crosshair_blue 0"
 alias green					"cl_crosshair_red 0;   cl_crosshair_green 255; cl_crosshair_blue 0"
 alias blue					"cl_crosshair_red 0;   cl_crosshair_green 0;   cl_crosshair_blue 255"
 alias yellow				"cl_crosshair_red 255; cl_crosshair_green 255; cl_crosshair_blue 0"
@@ -177,7 +177,7 @@ alias orangeh				"hud_combattext_red 255; hud_combattext_green 128; hud_combatte
 alias purpleh				"hud_combattext_red 128; hud_combattext_green 0;   hud_combattext_blue 255"
 alias minth					"hud_combattext_red 0;   hud_combattext_green 255; hud_combattext_blue 128"
 alias limeh					"hud_combattext_red 178; hud_combattext_green 255; hud_combattext_blue 0"
-alias skyblueh				"hud_combattext_red 60;  hud_combattext_green 158; hud_combattext_blue 255"
+alias skyblueh			"hud_combattext_red 60;  hud_combattext_green 158; hud_combattext_blue 255"
 alias blackh				"hud_combattext_red 0;   hud_combattext_green 0;   hud_combattext_blue 0"
 alias greyh					"hud_combattext_red 128; hud_combattext_green 128; hud_combattext_blue 128"
 alias whiteh				"hud_combattext_red 255; hud_combattext_green 255; hud_combattext_blue 255"
