--- a/overrides/spy.cfg
+++ b/overrides/spy.cfg
@@ -15,13 +15,6 @@ alias +Sap "slot2; +attack"
 alias -Sap "slot1; -attack"
 
 
-//------------------------
-// Enforcer Auto Disguise
-//------------------------
-alias +Enforcer  "+attack"
-alias -Enforcer  "-attack; disguise_scout"
-
-
 //-----------------------------
 // Readable Disguise Functions
 //-----------------------------
@@ -129,8 +122,8 @@ alias -dtog   "alias dsco esco; alias dpyr epyr; alias dsol esol; alias ddem ede
 //bind "" "+attack; ad"
 //bind "" toggle_ad
 
-alias +ad "alias toggle_ad -ad; alias ad lastdisguise; echo <<<Enforcer Autodisguise ON>>>"
-alias -ad "alias toggle_ad +ad; alias ad; echo <<<Enforcer Autodisguise OFF>>>"
+alias +ad "alias toggle_ad -ad; alias ad lastdisguise; developer 1; echo <<<Enforcer Autodisguise ON>>>"
+alias -ad "alias toggle_ad +ad; alias ad; developer 0; echo <<<Enforcer Autodisguise OFF>>>"
 -ad
 
 
